# cavoc-proto

./: README.md  cavoc.opam  dune-project  todo
doc/: index.mld
front/: common.js  index.html  indextuto.html  win.css
lib/RefML/: declaration.ml  declaration.mli  dune  heap.ml  interpreter.ml  interpreter.mli  lexer.mll  nup.ml  parser.mly  refML.ml  store.ml  store.mli  store_gen.ml  symbolic.ml  syntax.ml  syntax.mli  type_checker.ml  type_ctx.ml  type_ctx.mli  types.ml  types.mli
lib/lang/: abstract_val.ml  cps.ml  direct.ml  dune  interactive.ml  language.ml
lib/lts/: dune  graph.ml  interactive_build.ml  interactive_build.mli  movetree.ml  strategy.ml  synch_lts.ml
lib/ogs/: dune  ogslts.ml
lib/pogs/: dune
lib/util/: dune  monad.ml  pmap.ml  pmap.mli
test/: symbolic-bool-ref.ml  symbolic-bool-ref.mli  symbolic-bool.ml  symbolic-bool.mli
tuto/: tuto1.json  tuto1.md  tuto2.md
